third_party/WebKit/Source/core/layout/VisualRectMappingTest.cpp
@@ -20,7 +20,7 @@ protected:
     void checkPaintInvalidationStateRectMapping(const LayoutRect& expectedRect, const LayoutRect& rect, const LayoutObject& object, const LayoutView& layoutView, const LayoutObject& paintInvalidationContainer)
     {
         Vector<const LayoutObject*> ancestors;
-        for (const LayoutObject* ancestor = &object; ancestor != layoutView; ancestor = ancestor->parentCrossingFrameBoundaries())
+        for (const LayoutObject* ancestor = &object; ancestor != layoutView; ancestor = ancestor->paintInvalidationParent())
             ancestors.append(ancestor);
 
         Vector<Optional<PaintInvalidationState>> paintInvalidationStates(ancestors.size() + 1);
